# recruitment-dataset

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
data/: .gitignore  protected_groups.dvc
data/djinni/: .gitignore  jobs.csv.dvc  сandidates.csv.dvc
notebooks/: Intro_djinni_analyses.ipynb  dataset_loader_to_hf.ipynb  test.ipynb
notebooks/EDA/: EDA_candidates.ipynb  EDA_combinations.ipynb  EDA_jobs.ipynb  PII_CV_analyses.ipynb
notebooks/data/: PII_CV.csv
notebooks/src/: helpers.py
steps/1_preparation/: candidates_preparation.py  jobs_preparation.py  preparation.py
steps/1_preparation/src/: constants.py  embedding_creation.py  helpers.py  lang_detector.py  preprocessing.py
steps/2_title_vectorize_and_matching/: final_matching.py  groups_matching.py  title_vectorize.py
steps/2_title_vectorize_and_matching/src/: constants.py  embedding_store.py  matching.py
steps/3_data_corruption/src/: gender_changer.py
steps/translation/: translation.py
steps/translation/src/: translation_model.py
